some more refinements, added paras

--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -14,15 +14,29 @@ as well as [TeamUSEC](https://teamusec.de)
 all helped us to streamline usability and implementation issues 
 for guaranteed end-to-end encryption. 
 
+We'll first recall two main shortcomings of the [Autocrypt](https://autocrypt.org)
+end-to-end encryption that Delta Chat is using
+before describing how 1.42 apps overcome these issues
+through the universal introduction and refinement
+of the [SecureJoin](https://securejoin.delta.chat) protocols,
+introducing the notion of guaranteed end-to-end encryption,
+because it can not be broken by servers or Internet providers. 
+
+If you don't care much about encryption, 
+just scroll down to the "other good news" part 
+which may have some exciting news depending on platform for you ;) 
 
 ## Autocrypt: convenient but "opportunistic" E2E security 
 
 <img src="../assets/logos/autocrypt.svg" width="140" style="float:right; margin-left:1em;" />
 
-Let us recall two frequent criticism of Delta Chat's [Autocrypt](https://autocrypt.org) 
+There are two frequent criticisms of Delta Chat's [Autocrypt](https://autocrypt.org) 
 end-to-end encryption and its *opportunistic* nature: 
 
 - [MITM attack](https://en.wikipedia.org/wiki/Man-in-the-middle_attack): 
+  User's e-mail servers might try to meddle with the message encryption of their users. 
+  Autocrypt Level 1 explicitely does not protect against internet providers or e-mail
+  providers to start MITM attacks against their users. 
   Compromised infrastructure is arguably a stronger concern 
   for Delta Chat than Signal or Whatsapp users.
   After all, there is a not a single central 
@@ -44,6 +58,12 @@ Both issues are addressed with the currently rolling out 1.42 Delta Chat app rel
 as "Guaranteed end-to-end encryption" prevents messages 
 from unexpectedly dropping end-to-end encryption,
 and protects against compromised servers or networks. 
+While Delta Chat already offered "verified groups" for years, 
+we extended end-to-end encryption guarantees to 1:1 chats
+and unified group creation along the way:
+when you create a group with only green-checkmarked contacts,
+your group chat will automatically get a green-checkmark 
+and introduce guaranteed end-to-end encryption for all chat-members. 
 
 ## Guaranteed end-to-end encryption
 
@@ -65,16 +85,25 @@ and they can add each other to more and different green checkmarked group chats.
 
 <img src="../assets/blog/green-checkmark.svg" width="140" style="float:right; margin-left:1em;" />  
 
-Read more in our [revised Encryption and Security FAQ](https://delta.chat/en/help#encryption-and-security) 
+Please read more in our [revised Encryption and Security FAQ](https://delta.chat/en/help#encryption-and-security) 
 which is also contained and shipped with all Delta Chat apps,
 and also discusses security-relevant topics such as OpenPGP security, 
 Metadata protection and ephemeral messaging. 
 
-Lastly, you may read a lot more technical and scientific background on our 
+If you are helping others to use Delta Chat please read the FAQ entry on
+[when guaranteed end-to-end encryption breaks](https://delta.chat/en/help#nocryptanymore).
+The most common cause for encryption degradation is not an attack, 
+but that a user re-installed the app, 
+or installed it on another device without using the QR-code based multi-device setup flow.
+The FAQ gives clear advise on how to proceed. 
+We'll in the future aim to more automatically prevent users from ending in "inconsistent" states. 
+
+Lastly, for folks interested in protocols, 
+you may read a lot more technical and scientific background on our 
 [new SecureJoin protocols documentation site](https://securejoin.delta.chat)
 which also serves to prepare an independent security audit scheduled for 2024. 
 
-## A lot of other good news with 1.42 
+## A lot of other good news with 1.42
 
 The 1.42 releases also contain many other improvements, among them:
 
@@ -95,8 +124,15 @@ For complete lists of changes see:
 - [Desktop changes](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md) 
 - [Android changes](https://github.com/deltachat/deltachat-android/blob/master/CHANGELOG.md) 
 - [iOS changes](https://github.com/deltachat/deltachat-ios/blob/master/CHANGELOG.md) 
-- [core Rust
-  changes](https://github.com/deltachat/deltachat-core-rust/blob/main/CHANGELOG.md) 
+- [Core Rust changes](https://github.com/deltachat/deltachat-core-rust/blob/main/CHANGELOG.md) 
+
+On some stores, the 1.42 app releases might still take a while. 
+For Desktop, the "1.41" releases on the Microsoft store are fine to use. 
+We typically use even release numbers for store-releases 
+and uneven ones for the many intermediate ones. 
+Special thanks 💜 to Gerry, Andrea and the many other testers and
+community contributors for bug hunting, triaging, discussing and helping
+developers to understand and address issues. 
 
 Please report any further bugs or issues to [the forum](https://support.delta.chat) 
 or on our [core Rust issue tracker](https://github.com/deltachat/deltachat-core-rust/issues).
