--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -18,11 +18,11 @@ We'll first recall two main shortcomings of the [Autocrypt](https://autocrypt.or
 end-to-end encryption that Delta Chat is using
 before describing how 1.42 apps overcome these issues
 through the universal introduction and refinement
-of the [SecureJoin](https://securejoin.delta.chat) protocols,
-introducing the notion of guaranteed end-to-end encryption,
-because it can not be broken by servers or Internet providers. 
+of the decentralized [SecureJoin](https://securejoin.delta.chat) protocols,
+introducing the notion of guaranteed end-to-end encryption
+which can not be broken by servers or Internet providers. 
 
-If you don't care much about encryption, 
+Oh, and if you don't care much about encryption, 
 just scroll down to the "other good news" part 
 which may have some exciting news depending on platform for you ;) 
 
