--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -23,7 +23,7 @@ introducing the notion of guaranteed end-to-end encryption
 which can not be broken by servers or Internet providers. 
 
 Oh, and if you don't care much about encryption, 
-just scroll down to the "other good news" part 
+just [scroll down to the "other good news" part](#a-lot-of-other-good-news-with-142)
 which may have some exciting news depending on platform for you ;) 
 
 ## Autocrypt: convenient but "opportunistic" E2E security 
@@ -96,16 +96,17 @@ The most common cause for encryption degradation is not an attack,
 but that a user re-installed the app, 
 or installed it on another device without using the QR-code based multi-device setup flow.
 The FAQ gives clear advise on how to proceed. 
-We'll in the future aim to more automatically prevent users from ending in "inconsistent" states. 
+For future releases, we'll aim to automatically prevent users 
+from ending in such inconsistent multi-device setup states. 
 
-Lastly, for folks interested in protocols, 
+Lastly, for folks interested in security protocols, 
 you may read a lot more technical and scientific background on our 
 [new SecureJoin protocols documentation site](https://securejoin.delta.chat)
 which also serves to prepare an independent security audit scheduled for 2024. 
 
 ## A lot of other good news with 1.42
 
-The 1.42 releases also contain many other improvements, among them:
+The 1.42 releases contain many other improvements, among them:
 
 - 🔄 Accept/Blocked, Archived, Pinned, Mute actions are now synced across all your devices,
 
