--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -35,7 +35,7 @@ end-to-end encryption and its *opportunistic* nature:
 
 - [MITM attack](https://en.wikipedia.org/wiki/Man-in-the-middle_attack): 
   User's e-mail servers might try to meddle with the message encryption of their users. 
-  Autocrypt Level 1 explicitely does not protect against internet providers or e-mail
+  Autocrypt Level 1 explicitly does not protect against internet providers or e-mail
   providers to start MITM attacks against their users. 
   Compromised infrastructure is arguably a stronger concern 
   for Delta Chat than Signal or Whatsapp users.
