--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -118,8 +118,8 @@ The 1.42 releases contain many other improvements, among them:
 - ❤️  Reactions can be enabled in Android advanced settings 
 
 - 🐞 Bug fixes, bug fixes and more bug fixes (all dev areas got many issues
-  resolved -- Android went from a dozen PRs 
-  and roughly [50 issues to very few!](https://github.com/deltachat/deltachat-android/issues)
+  resolved ) -- Android went from a dozen PRs 
+  and roughly [50 issues to 5!](https://github.com/deltachat/deltachat-android/issues)
 
 For complete lists of changes see: 
 
