add fediverse comid for discussions/feedback

--- a/_posts/2023-11-23-jumbo-42.md
+++ b/_posts/2023-11-23-jumbo-42.md
@@ -2,6 +2,7 @@
 title: Guaranteed End-to-End encryption and many other good news
 author: holga
 image: ../assets/blog/2023-11-green-checkmark-wide.png
+com_id: 111460913692845091
 ---
 
 ![E2EE from now on](../assets/blog/2023-11-e2ee-activated.png)
