chatmail blogpost: add logo

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -1,10 +1,10 @@
 ---
 title: Chatmail - replicable, fast and secure chatting infrastructure for all 
 author: xxx
-image: ../assets/blog/2023-11-green-checkmark-wide.png
+image: ../assets/logos/chatmail.jpg
 ---
 
-![Chatmail logo](../assets/logos/chatmail.png)
+![Chatmail logo](../assets/logos/chatmail.jpg)
 
 Today, we are unvealing **open-signup chatmail services**,
 a minimal and modern e-mail service 
