--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -4,8 +4,7 @@ author: xxx
 image: ../assets/logos/chatmail.jpg
 ---
 
-![Chatmail logo](../assets/logos/chatmail.jpg)
-
+<img alt="Chatmail logo" src="../assets/logos/chatmail.jpg" width="20%" style="float:right; margin-left:1em;" />
 Today, we are unvealing **open-signup chatmail services**,
 a minimal and modern e-mail service 
 to make onboarding with Delta Chat a breeze, with peace of mind: 
@@ -22,7 +21,7 @@ You may peek at [nine.testrun.org](https://testrun.org)
 or simply scan the below QR code to get a `nine.testrun.org address`: 
 
 <a href="DCACCOUNT:https://nine.testrun.org/cgi-bin/newemail.py">
-    <img width=300 style="float: none;" src="../assets/logos/nine-invite-qrcode.png" /></a>
+    <img width=300 style="float: none;" src="../assets/blog/nine-invite-qrcode.png" /></a>
 
 After setting your avatar and name, 
 you may message `echo@nine.testrun.org` and see an answer quite immediately. 
