fixing a nine link and expanding a bit on the privacy/lexict in the multi-account section

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -1,6 +1,6 @@
 ---
 title: Chatmail - replicable, fast and secure chatting infrastructure for all 
-author: xxx
+author: root at nine.testrun.org 
 image: ../assets/logos/chatmail.jpg
 ---
 
@@ -17,8 +17,8 @@ to make onboarding with Delta Chat a breeze, with peace of mind:
 
 Too good to be true? 
 
-You may peek at [nine.testrun.org](https://testrun.org)
-or simply scan the below QR code to get a `nine.testrun.org address`: 
+You may peek at [nine.testrun.org](https://nine.testrun.org)
+or simply tap or scan the below QR code to get a `@nine.testrun.org` address: 
 
 <a href="DCACCOUNT:https://nine.testrun.org/cgi-bin/newemail.py">
     <img width=300 style="float: none;" src="../assets/blog/nine-invite-qrcode.png" /></a>
@@ -42,12 +42,21 @@ for spammers to abuse chatmail accounts.
 Also, chatmail services incorporate many best e-mail server practises,
 overall making it unlikely they get flagged as a source of spam. 
 
-## Receiving newsletters and registering with websites 
+## Registering with newsletters or platforms, without privacy leaks
 
-Delta Chat apps support using multiple chatmail or e-mail addresses. 
-With [nine.testrun.org](https://nine.testrun.org) you can setup
-an additional address (account) to receive a newsletter or register with a website. 
-If you don't need or want it anymore, simply delete it on your device. 
+Delta Chat apps supports using multiple addresses out of the box. 
+With [nine.testrun.org](https://nine.testrun.org) you can always setup
+additional addresses to receive newsletters or register with websites.
+If you don't need or use the address anymore, simply delete it on your device. 
+We are happy to see you go and maybe re-enter with a new e-mail address,
+possibly using Tor or a VPN?  
+This way the chatmail-server never even sees your TCP/IP Internet address 
+which is anyway only ephemerally logged and not collected. 
+Speaking of not collecting data, 
+please see [nine's privacy policy](https://nine.testrun.org/privacy.html)
+which was created by data protection specialists and our long-term supporters
+at [lexICT.de](https://lexict.de). 
+
 
 ## Nine.testrun.org and running chatmail services yourself 
 
@@ -71,3 +80,4 @@ We welcome feedback and contributions to the
 and intend to do workshops and sessions at both the upcoming
 37c3 Chaos Communication congress end of the year in Hamburg,
 as well arounnd OFFDEM/FOSSDEM 2024 in Bruxelles. 
+
