--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -1,13 +1,12 @@
 ---
 title: Chatmail - replicable, fast and secure chatting infrastructure for all 
-author: root at nine.testrun.org 
+author: holga, nami 
 image: ../assets/logos/chatmail.jpg
 ---
 
 <img alt="Chatmail logo" src="../assets/logos/chatmail.jpg" width="20%" style="float:right; margin-left:1em;" />
-Today, we are unvealing **open-signup chatmail services**,
-a minimal and modern e-mail service 
-to make onboarding with Delta Chat a breeze, with peace of mind: 
+Today, we are unvealing **chatmail services**,
+making onboarding with Delta Chat a breeze, with peace of mind: 
 
 - **Convenience**: Get a chatmail address in a few seconds 
 
@@ -16,9 +15,13 @@ to make onboarding with Delta Chat a breeze, with peace of mind:
 - **Speed**: Message delivery in well under a second, end-to-end
 
 Too good to be true? 
+You know from our announcements that we typically only claim big things 
+when we can also show working software, don't you? 
+This case is no different :) 
 
 You may peek at [nine.testrun.org](https://nine.testrun.org)
-or simply tap or scan the below QR code to get a `@nine.testrun.org` address: 
+or simply tap or scan the below QR code to get a `@nine.testrun.org` address
+after you have installed Delta Chat on your device
 
 <a href="DCACCOUNT:https://nine.testrun.org/cgi-bin/newemail.py">
     <img width=300 style="float: none;" src="../assets/blog/nine-invite-qrcode.png" /></a>
@@ -27,57 +30,98 @@ After setting your avatar and name,
 you may message `echo@nine.testrun.org` and see an answer quite immediately. 
 
 
-## Send a message to anyone if you can end-to-end encrypt 
+## How to make e-mail spammers sad and users safe
 
-Chatmail services don't allow to send un-encrypted messages 
-to anyone outside the service. 
+`nine.testrun.org` currently allows to send 60 messages per minute for any user
+and you can register multiple e-mail addresses.
+Isn't this paradise for abusers wanting to send out lots of unsolicited messages? 
+Wouldn't this get chatmail services insta-blocked from other e-mail providers? 
+
+Fortunately, there is a simple twist to prevent account abuse: 
+**A chatmail service doesn't allow to send un-encrypted messages 
+to anyone outside the service.**
 This makes spammers sad who would try to abuse open-signup chatmail addresses
-because they first would need to setup OpenPGP encryption with all recipients. 
-But Delta Chat uses [Autocrypt](https://autocrypt.org) 
-which does not publish encryption keys anywhere.
-Moreover, today's *Internet platforms do not collect OpenPGP identities*
-and so can only sell or leak e-mail addresses but not the encryption setup. 
-Therefore it's a massive uphill struggle and economically un-interesting 
-for spammers to abuse chatmail accounts. 
-Also, chatmail services incorporate many best e-mail server practises,
-overall making it unlikely they get flagged as a source of spam. 
+because they first would need to setup OpenPGP encryption with all recipients,
+a known hard problem and thus a substantial proof of work, no? :) 
+
+More seriously, 
+Delta Chat uses the decentralized [Autocrypt](https://autocrypt.org) standard
+which does not publish or centralize encryption keys anywhere.
+Moreover, today's *Internet platforms track everything except OpenPGP keys*
+and so can only sell or leak to spammers profiled e-mail addresses but not encryption keys.
+It's therefore a massive uphill struggle and economically un-interesting 
+to abuse chatmail accounts for mass-sending unsolicited mail. 
+
+For when this economic constraint changes, 
+we may have some aces up our sleeves 
+to make spammers and surveillance actors even more unhappy. 
+But more about that when the time comes. 
+
+## Use guaranteed end-to-end encryption to reach any e-mail address 
+
+We generally recommend to use QR-code scans to setup 
+[guaranteed end-to-end encryption](https://delta.chat/en/2023-11-23-jumbo-42) 
+with other chatmail or e-mail users. 
+This way, you can safely chat 
+no matter what chatmail or e-mail server contacts use. 
+**Setting up guaranteed end-to-end encryption minimizes the trust 
+you need to have in chatmail or traditional e-mail server operators.**
+Chatmail operators generally can't read the content of messages
+and by design hardly know any personally identifiable data.
+
+Chatmail services really act more as an *e-mail router* rather than an account platform. 
+Anyone can get a slot but only end-to-end encrypted messages get first-class treatment. 
+
 
 ## Registering with newsletters or platforms, without privacy leaks
 
 Delta Chat apps supports using multiple addresses out of the box. 
 With [nine.testrun.org](https://nine.testrun.org) you can always setup
 additional addresses to receive newsletters or register with websites.
-If you don't need or use the address anymore, simply delete it on your device. 
-We are happy to see you go and maybe re-enter with a new e-mail address,
-possibly using Tor or a VPN?  
-This way the chatmail-server never even sees your TCP/IP Internet address 
+Incoming messages are allowed to be un-encrypted
+(this might become user-configurable in the future)
+and so they are just fine for receiving e-mail messages. 
+
+If you don't need or use an additional address anymore, 
+simply delete it on your device.
+We are happy to see you go and, who knows, 
+maybe re-enter with a new e-mail address, possibly using Tor or a VPN?  
+This way the chatmail-server never even sees your Internet address 
 which is anyway only ephemerally logged and not collected. 
 Speaking of not collecting data, 
-please see [nine's privacy policy](https://nine.testrun.org/privacy.html)
-which was created by data protection specialists and our long-term supporters
-at [lexICT.de](https://lexict.de). 
+please see [nine's state-of-the-art privacy policy](https://nine.testrun.org/privacy.html)
+which was created by the data protection specialists and our long-term supporters
+at [lexICT.de](https://lexict.de).  
+One of the german classics on "Data protection at the work place" was btw
+co-written by [Fabian Schmieder](https://www.lexict.de/fabian-schmieder-en.html),
+our appointed privacy officer of [testrun.org](https://testrun.org) mail services. 
 
 
 ## Nine.testrun.org and running chatmail services yourself 
 
 Our just published [Chatmail repository](https://github.com/deltachat/chatmail) 
-contains the executable blue-print for setting up a modern e-mail service
-that is optimized for use with Delta Chat.
-
-[Nine.testrun.org](https://nine.testrun.org) is operated 
-by some Delta Chat project members, on the side. 
+contains the executable blue-print for setting up a modern e-mail service,
+of which [Nine.testrun.org](https://nine.testrun.org) is the first public instance. 
+It is operated by some Delta Chat project members, *on the side*. 
 This mirrors how we envision chatmail services to be operated: 
 by a small group or individuals
-who don't need to worry or spend a lot of time on the service. 
+who don't need to worry much or spend a lot of time on the service,
+but who enable reliable and secure chat communication for many thousands of users.
+We haven't fully explored limits yet but `nine` has already served >100K accounts
+and millions of messages before now going public. 
+Day-to-day development of Delta Chat apps uses around 10 new `@nine.testrun.org` accounts 
+per commit and there are many commits per day. 
+
 With some knowledge of DNS, SSH and a spare VPS (get the cheapest you can find),
-you can setup and offer chatmail services pretty quickly. 
+you can setup and offer chatmail services yourself pretty quickly. 
 A friend easily recently set it up on a Rasperry Pi for his housing project. 
 Chatmail servers are designed to run with minimal hardware requirements
-and to be easy to tweek even from novice sysadmins or programmers. 
+and to be easy to tweak even from novice sysadmins or programmers. 
+No permission is needed from our side to run a chatmail server. 
+We might not even know you are doing it because Delta Chat has no tracking or counting. 
 
-We welcome feedback and contributions to the 
-[Chatmail repository](https://github.com/deltachat/chatmail)
-and intend to do workshops and sessions at both the upcoming
+But we warmly welcome feedback (especially bug/success reports!) 
+and contributions via the [Chatmail repository](https://github.com/deltachat/chatmail)
+and also intend to do workshops and sessions at both the upcoming
 37c3 Chaos Communication congress end of the year in Hamburg,
-as well arounnd OFFDEM/FOSSDEM 2024 in Bruxelles. 
-
+as well around OFFDEM/FOSSDEM in Bruxelles begining February 2024.
