--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -15,11 +15,8 @@ making onboarding with Delta Chat a breeze, with peace of mind:
 - **Speed**: Message delivery in well under a second, end-to-end
 
 Too good to be true? 
-You know from our announcements that we typically only claim big things 
-when we can also show working software, don't you? 
-This case is no different :) 
 
-You may peek at [nine.testrun.org](https://nine.testrun.org)
+Feel free to find out and peek at [nine.testrun.org](https://nine.testrun.org)
 or simply tap or scan the below QR code to get a `@nine.testrun.org` address
 after you have installed Delta Chat on your device
 
