--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -5,7 +5,7 @@ image: ../assets/logos/chatmail.jpg
 ---
 
 <img alt="Chatmail logo" src="../assets/logos/chatmail.jpg" width="20%" style="float:right; margin-left:1em;" />
-Today, we are unvealing **chatmail services**,
+Today, we are unveiling **chatmail services**,
 making onboarding with Delta Chat a breeze, with peace of mind: 
 
 - **Convenience**: Get a chatmail address in a few seconds 
