--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -24,7 +24,8 @@ after you have installed Delta Chat on your device
     <img width=300 style="float: none;" src="../assets/blog/nine-invite-qrcode.png" /></a>
 
 After setting your avatar and name, 
-you may message `echo@nine.testrun.org` and see an answer quite immediately. 
+you may message `echo@nine.testrun.org` and observe an answer.
+Isn't it *suprisingly* fast? 
 
 
 ## How to make e-mail spammers sad and users safe
@@ -122,3 +123,48 @@ and contributions via the [Chatmail repository](https://github.com/deltachat/cha
 and also intend to do workshops and sessions at both the upcoming
 37c3 Chaos Communication congress end of the year in Hamburg,
 as well around OFFDEM/FOSSDEM in Bruxelles begining February 2024.
+
+## Wait a moment, sub-second delivery? 
+
+Yes, here are some benchmarks, run on a remote machine against `nine.testrun.org`,
+with a network latency of 20-30ms per internet data packet: 
+
+```
+benchmark name                 median    min    max
+---------------------------------------------------
+imap_connect                     0.13   0.11   0.19
+imap_connect_and_login           0.21   0.20   0.24
+smtp_connect                     0.19   0.17   0.24
+smtp_connect_and_login           0.26   0.25   0.27
+autoconfig_and_idle_ready        1.18   1.12   1.19
+ping_pong                        0.47   0.44   1.16
+send_10_receive_10               2.21   1.74   2.44
+```
+
+`dc_ping_pong` measures *two* end-to-end encrypted device-to-device message deliveries. 
+**One chat message is thus delivered end-to-end/device-to-device in a quarter of a second.**
+
+Why are we not making a bolder fuzz about probably launching
+the fastest e-mail service on the planet? 
+The answer is twofold: 
+
+- Discussing speed characteristics of Delta Chat and chat e-mail services
+  deserves its own focused blog post. 
+  It's an interesting story with some amusing surprises and bummers :)
+
+- Many of us think that `speed` is overrated or, how the venerable 
+  Brett Scott put it a few days ago, 
+  [Tech doesn’t make our lives easier. It makes them faster](
+  https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier). 
+
+Yes, chatmail is blazing fast but that's not a purpose in itself. 
+Making secure, interoperable, decentralized, guaranteed end-to-end encrypted 
+communications available for all, is more important than sub-second delivery. 
+It is not another business model that can replace Whatsapp/Meta,
+at least not without becoming a mirror image. 
+Only communities who sovereignly run their own infrastructures,
+evading centralized control and dependencies, might free themselves. 
+
+The e-mail system is a vast space which sourrounds us already. 
+
+We hope some of you join the amusing journey in exploring it further :) 
