--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -1,12 +1,13 @@
 ---
 title: Chatmail - replicable, fast and secure chatting infrastructure for all 
 author: holga, nami 
-image: ../assets/logos/chatmail.jpg
+image: ../assets/logos/chatmail-wide.png
 ---
 
-<img alt="Chatmail logo" src="../assets/logos/chatmail.jpg" width="20%" style="float:right; margin-left:1em;" />
 Today, we are unveiling **chatmail services**,
-making onboarding with Delta Chat a breeze, with peace of mind: 
+making onboarding with Delta Chat a breeze, with peace of mind:
+
+<img alt="Chatmail logo" src="../assets/logos/chatmail.svg" width="220" style="float:right;" />
 
 - **Convenience**: Get a chatmail address in a few seconds 
 
