--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -26,7 +26,7 @@ after you have installed Delta Chat on your device
 
 After setting your avatar and name, 
 you may message `echo@nine.testrun.org` and observe an answer.
-Isn't it *suprisingly* fast? 
+Isn't it *surprisingly* fast?
 
 
 ## How to make e-mail spammers sad and users safe
@@ -113,7 +113,7 @@ per commit and there are many commits per day.
 
 With some knowledge of DNS, SSH and a spare VPS (get the cheapest you can find),
 you can setup and offer chatmail services yourself pretty quickly. 
-A friend easily recently set it up on a Rasperry Pi for his housing project. 
+A friend easily recently set it up on a Raspberry Pi for his housing project.
 Chatmail servers are designed to run with minimal hardware requirements
 and to be easy to tweak even from novice sysadmins or programmers. 
 No permission is needed from our side to run a chatmail server. 
@@ -123,7 +123,7 @@ But we warmly welcome feedback (especially bug/success reports!)
 and contributions via the [Chatmail repository](https://github.com/deltachat/chatmail)
 and also intend to do workshops and sessions at both the upcoming
 37c3 Chaos Communication congress end of the year in Hamburg,
-as well around OFFDEM/FOSSDEM in Bruxelles begining February 2024.
+as well around OFFDEM/FOSSDEM in Bruxelles beginning February 2024.
 
 ## Wait a moment, sub-second delivery? 
 
@@ -166,8 +166,8 @@ at least not without becoming a mirror image.
 Only communities who sovereignly run their own infrastructures,
 evading centralized control and dependencies, might free themselves. 
 
-The e-mail network is a vast rhizomatic space which sourrounds us already,
-and is diversely deployed at planetary scale. 
+The e-mail network is a vast rhizomatic space which surrounds us already,
+and is diversely deployed at planetary scale.
 
 We hope some of you join the amusing journey in exploring it further,
 and put some more long-running critiques to rest :) 
