amending the last section a bit

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -165,6 +165,8 @@ at least not without becoming a mirror image.
 Only communities who sovereignly run their own infrastructures,
 evading centralized control and dependencies, might free themselves. 
 
-The e-mail system is a vast space which sourrounds us already. 
+The e-mail network is a vast rhizomatic space which sourrounds us already,
+and is diversely deployed at planetary scale. 
 
-We hope some of you join the amusing journey in exploring it further :) 
+We hope some of you join the amusing journey in exploring it further,
+and put some more long-running critiques to rest :) 
