stroke last sentence of blog post after nami's critique

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -17,7 +17,9 @@ making onboarding with Delta Chat a breeze, with peace of mind:
 
 Too good to be true? 
 
-Feel free to find out and peek at [nine.testrun.org](https://nine.testrun.org)
+## Trying it out 
+
+Feel free to peek at [nine.testrun.org](https://nine.testrun.org)
 or simply tap or scan the below QR code to get a `@nine.testrun.org` address
 after you have installed Delta Chat on your device
 
@@ -25,8 +27,7 @@ after you have installed Delta Chat on your device
     <img width=300 style="float: none;" src="../assets/blog/nine-invite-qrcode.png" /></a>
 
 After setting your avatar and name, 
-you may message `echo@nine.testrun.org` and observe an answer.
-Isn't it *surprisingly* fast?
+you may message `echo@nine.testrun.org` and observe a *sub-second reply*.
 
 
 ## How to make e-mail spammers sad and users safe
@@ -131,15 +132,12 @@ Yes, here are some benchmarks, run on a remote machine against `nine.testrun.org
 with a network latency of 20-30ms per internet data packet: 
 
 ```
+[nine.testrun.org]
 benchmark name                 median    min    max
 ---------------------------------------------------
-imap_connect                     0.13   0.11   0.19
-imap_connect_and_login           0.21   0.20   0.24
-smtp_connect                     0.19   0.17   0.24
-smtp_connect_and_login           0.26   0.25   0.27
-autoconfig_and_idle_ready        1.18   1.12   1.19
-ping_pong                        0.47   0.44   1.16
-send_10_receive_10               2.21   1.74   2.44
+dc_autoconfig_and_idle_ready     1.17   1.14   1.18
+dc_ping_pong                     0.46   0.43   1.05
+dc_send_10_receive_10            2.22   1.77   2.22
 ```
 
 `dc_ping_pong` measures *two* end-to-end encrypted device-to-device message deliveries. 
@@ -168,6 +166,4 @@ evading centralized control and dependencies, might free themselves.
 
 The e-mail network is a vast rhizomatic space which surrounds us already,
 and is diversely deployed at planetary scale.
-
-We hope some of you join the amusing journey in exploring it further,
-and put some more long-running critiques to rest :) 
+We hope some of you join the amusing journey in exploring it further :)
