some small tweaks, and one more asking for feedback

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -17,20 +17,24 @@ making onboarding with Delta Chat a breeze, with peace of mind:
 
 Too good to be true? 
 
-## Trying it out 
+## Try it out 
 
-Feel free to peek at [nine.testrun.org](https://nine.testrun.org)
-or simply tap or scan the below QR code to get a `@nine.testrun.org` address
-after you have installed Delta Chat on your device
+You may peek at [nine.testrun.org](https://nine.testrun.org),
+and after installation of a Delta Chat app, 
+simply tap or scan the below QR code to get a `@nine.testrun.org` address
 
 <a href="DCACCOUNT:https://nine.testrun.org/cgi-bin/newemail.py">
     <img width=300 style="float: none;" src="../assets/blog/nine-invite-qrcode.png" /></a>
 
 After setting your avatar and name, 
-you may message `echo@nine.testrun.org` and observe a *sub-second reply*.
+message `echo@nine.testrun.org` and observe a (rapid) reply. 
+
+Please let us know about success and especially failure 
+to help us streamline the first public chatmail service `nine.testrun.org`
+which we intend to keep running for a longer while, as a community service. 
 
 
-## How to make e-mail spammers sad and users safe
+## How to make e-mail spammers sad, and users safe 
 
 `nine.testrun.org` currently allows to send 60 messages per minute for any user
 and you can register multiple e-mail addresses.
