adding more birth-helpers as authors, and streamlining here and there

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -1,6 +1,6 @@
 ---
 title: Chatmail - replicable, fast and secure chatting infrastructure for all 
-author: holga, nami 
+author: holga, nami, x, l, bjoern
 image: ../assets/logos/chatmail-wide.png
 ---
 
@@ -30,8 +30,9 @@ After setting your avatar and name,
 message `echo@nine.testrun.org` and observe a (rapid) reply. 
 
 Please let us know about success and especially failure 
-to help us streamline the first public chatmail service `nine.testrun.org`
-which we intend to keep running for a longer while, as a community service. 
+to help us streamline `nine.testrun.org, 
+the first public chatmail service 
+which we aim to keep running as a community service.
 
 
 ## How to make e-mail spammers sad, and users safe 
@@ -164,7 +165,7 @@ Yes, chatmail is blazing fast but that's not a purpose in itself.
 Making secure, interoperable, decentralized, guaranteed end-to-end encrypted 
 communications available for all, is more important than sub-second delivery. 
 It is not another business model that can replace Whatsapp/Meta,
-at least not without becoming a mirror image. 
+at least not without becoming their mirror image. 
 Only communities who sovereignly run their own infrastructures,
 evading centralized control and dependencies, might free themselves. 
 
