--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -106,7 +106,7 @@ our appointed privacy officer of [testrun.org](https://testrun.org) mail service
 
 Our just published [Chatmail repository](https://github.com/deltachat/chatmail) 
 contains the executable blue-print for setting up a modern e-mail service,
-of which [Nine.testrun.org](https://nine.testrun.org) is the first public instance. 
+of which [nine.testrun.org](https://nine.testrun.org) is the first public instance. 
 It is operated by some Delta Chat project members, *on the side*. 
 This mirrors how we envision chatmail services to be operated: 
 by a small group or individuals
@@ -114,8 +114,10 @@ who don't need to worry much or spend a lot of time on the service,
 but who enable reliable and secure chat communication for many thousands of users.
 We haven't fully explored limits yet but `nine` has already served >100K accounts
 and millions of messages before now going public. 
-Day-to-day development of Delta Chat apps uses around 10 new `@nine.testrun.org` accounts 
-per commit and there are many commits per day. 
+Day-to-day development of the [deltachat-core-rust library](https://github.com/deltachat/deltachat-core-rust] creates around 10 new `@nine.testrun.org` accounts per commit 
+and there are many commits per day. 
+In other words, availability and reliability of `nine.testrun.org` is continously verified,
+and it is maintained and refined through the public Chatmail repository. 
 
 With some knowledge of DNS, SSH and a spare VPS (get the cheapest you can find),
 you can setup and offer chatmail services yourself pretty quickly. 
