adding some images

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -37,6 +37,8 @@ which we aim to keep running as a community service.
 
 ## How to make e-mail spammers sad, and users safe 
 
+<img src="../assets/blog/two-faces.jpeg" width="140" style="float:right; margin-left:1em;" />  
+
 `nine.testrun.org` currently allows to send 60 messages per minute for any user
 and you can register multiple e-mail addresses.
 Isn't this paradise for abusers wanting to send out lots of unsolicited messages? 
@@ -48,6 +50,8 @@ to anyone outside the service.**
 This makes spammers sad who would try to abuse open-signup chatmail addresses
 because they first would need to setup OpenPGP encryption with all recipients,
 a known hard problem and thus a substantial proof of work, no? :) 
+
+<img src="../assets/logos/autocrypt.svg" width="140" style="float:right; margin-left:1em;" />  
 
 More seriously, 
 Delta Chat uses the decentralized [Autocrypt](https://autocrypt.org) standard
@@ -63,6 +67,8 @@ to make spammers and surveillance actors even more unhappy.
 But more about that when the time comes. 
 
 ## Use guaranteed end-to-end encryption to reach any e-mail address 
+
+<img src="../assets/blog/green-checkmark.svg" width="140" style="float:right; margin-left:1em;" />  
 
 We generally recommend to use QR-code scans to setup 
 [guaranteed end-to-end encryption](https://delta.chat/en/2023-11-23-jumbo-42) 
@@ -103,6 +109,8 @@ our appointed privacy officer of [testrun.org](https://testrun.org) mail service
 
 
 ## Nine.testrun.org and running chatmail services yourself 
+
+<img alt="future of email screenshot on testrun banner" src="../assets/blog/collage-info.png" width="800" style="float:right;" />
 
 Our just published [Chatmail repository](https://github.com/deltachat/chatmail) 
 contains the executable blue-print for setting up a modern e-mail service,
@@ -147,7 +155,7 @@ dc_ping_pong                     0.46   0.43   1.05
 dc_send_10_receive_10            2.22   1.77   2.22
 ```
 
-`dc_ping_pong` measures *two* end-to-end encrypted device-to-device message deliveries. 
+`dc_ping_pong` measures two end-to-end encrypted device-to-device message deliveries. 
 **One chat message is thus delivered end-to-end/device-to-device in a quarter of a second.**
 
 Why are we not making a bolder fuzz about probably launching
@@ -173,4 +181,4 @@ evading centralized control and dependencies, might free themselves.
 
 The e-mail network is a vast rhizomatic space which surrounds us already,
 and is diversely deployed at planetary scale.
-We hope some of you join the amusing journey in exploring it further :)
+We hope many of you join the amusing journey in exploring it further :)
