remove 'first-class'

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -81,7 +81,7 @@ Chatmail operators generally can't read the content of messages
 and by design hardly know any personally identifiable data.
 
 Chatmail services really act more as an *e-mail router* rather than an account platform. 
-Anyone can get a slot but only end-to-end encrypted messages get first-class treatment. 
+Anyone can get a slot but only end-to-end encrypted messages can freely travel. 
 
 
 ## Registering with newsletters or platforms, without privacy leaks
