add a gif showing the nine.testrun.org delivery speed

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -160,6 +160,11 @@ dc_send_10_receive_10            2.22   1.77   2.22
 `dc_ping_pong` measures two end-to-end encrypted device-to-device message deliveries. 
 **One chat message is thus delivered end-to-end/device-to-device in a quarter of a second.**
 
+<video style="max-width: 100%" autoplay="" muted="" loop="" playsinline="">
+  <source src="../assets/blog/nine-echo.mp4" type="video/mp4">
+  <img src="../assets/blog/nine-echo.gif">
+</video>
+
 Why are we not making a bolder fuzz about probably launching
 the fastest e-mail service on the planet? 
 The answer is twofold: 
