--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -86,6 +86,9 @@ Anyone can get a slot but only end-to-end encrypted messages can freely travel.
 
 ## Registering with newsletters or platforms, without privacy leaks
 
+<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">
+<img src="../assets/blog/tech-not-easier.webp" width="210" style="float:right; margin-left:1em;" />  </a>
+
 Delta Chat apps supports using multiple addresses out of the box. 
 With [nine.testrun.org](https://nine.testrun.org) you can always setup
 additional addresses to receive newsletters or register with websites.
