clarify that fabian schmieder is PDO for all

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -108,8 +108,7 @@ which was created by the data protection specialists and our long-term supporter
 at [lexICT.de](https://lexict.de).  
 One of the german classics on "Data protection at the work place" was btw
 co-written by [Fabian Schmieder](https://www.lexict.de/fabian-schmieder-en.html),
-our appointed privacy officer of [testrun.org](https://testrun.org) mail services. 
-
+our appointed privacy officer of all [testrun.org](https://testrun.org) mail services. 
 
 ## Nine.testrun.org and running chatmail services yourself 
 
