add aria-hidden to gif

--- a/_posts/2023-12-15-chatmail.md
+++ b/_posts/2023-12-15-chatmail.md
@@ -162,7 +162,7 @@ dc_send_10_receive_10            2.22   1.77   2.22
 
 <video style="max-width: 100%" autoplay="" muted="" loop="" playsinline="">
   <source src="../assets/blog/nine-echo.mp4" type="video/mp4">
-  <img src="../assets/blog/nine-echo.gif">
+  <img aria-hidden="true" src="../assets/blog/nine-echo.gif">
 </video>
 
 Why are we not making a bolder fuzz about probably launching
