--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -159,13 +159,14 @@ dc_send_10_receive_10            2.22   1.77   2.22
 
 `dc_ping_pong` measures two end-to-end encrypted device-to-device message deliveries. 
 **One chat message is thus delivered end-to-end/device-to-device in a quarter of a second.**
-If you don't believe that the following video fragment reflects *actual speed* 
-please be our guest and verify it yourself, and scroll up to the beginning of the post :) 
 
 <video style="max-width: 100%" autoplay="" muted="" loop="" playsinline="">
   <source src="../assets/blog/nine-echo.mp4" type="video/mp4">
   <img aria-hidden="true" src="../assets/blog/nine-echo.gif">
 </video>
+
+If you don't believe that this screen-recording reflects the *actual speed* 
+please verify it yourself, and scroll up to the beginning of the post :) 
 
 Why are we not making a bolder fuzz about probably launching
 the fastest e-mail service on the planet? 
