--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -126,7 +126,7 @@ who don't need to worry much or spend a lot of time on the service,
 but who enable reliable and secure chat communication for many thousands of users.
 We haven't fully explored limits yet but `nine` has already served >100K accounts
 and millions of messages before now going public. 
-Day-to-day development of the [deltachat-core-rust library](https://github.com/deltachat/deltachat-core-rust] creates around 10 new `@nine.testrun.org` accounts per commit 
+Day-to-day development of the [deltachat-core-rust library](https://github.com/deltachat/deltachat-core-rust) creates around 10 new `@nine.testrun.org` accounts per commit 
 and there are many commits per day. 
 In other words, availability and reliability of `nine.testrun.org` is continously verified,
 and it is maintained and refined through the public Chatmail repository. 
