similar logo sizes, margin below operator-image

--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -7,7 +7,7 @@ image: ../assets/logos/chatmail-wide.png
 Today, we are unveiling **chatmail services**,
 making onboarding with Delta Chat a breeze, with peace of mind:
 
-<img alt="Chatmail logo" src="../assets/logos/chatmail.svg" width="220" style="float:right;" />
+<img alt="Chatmail logo" src="../assets/logos/chatmail.svg" width="160" style="float:right;" />
 
 - **Convenience**: Get a chatmail address in a few seconds 
 
@@ -114,7 +114,7 @@ our appointed privacy officer of all [testrun.org](https://testrun.org) mail ser
 
 ## Nine.testrun.org and running chatmail services yourself 
 
-<img alt="future of email screenshot on testrun banner" src="../assets/blog/collage-info.png" width="800" style="float:right;" />
+<img alt="future of email screenshot on testrun banner" src="../assets/blog/collage-info.png" width="800" style="float:right; margin-bottom: 1em;" />
 
 Our just published [Chatmail repository](https://github.com/deltachat/chatmail) 
 contains the executable blue-print for setting up a modern e-mail service,
