--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -128,7 +128,7 @@ We haven't fully explored limits yet but `nine` has already served >100K account
 and millions of messages before now going public. 
 Day-to-day development of the [deltachat-core-rust library](https://github.com/deltachat/deltachat-core-rust) creates around 10 new `@nine.testrun.org` accounts per commit 
 and there are many commits per day. 
-In other words, availability and reliability of `nine.testrun.org` is continously verified,
+In other words, availability and reliability of `nine.testrun.org` is continuously verified,
 and it is maintained and refined through the public Chatmail repository. 
 
 With some knowledge of DNS, SSH and a spare VPS (get the cheapest you can find),
