linkify 37c3/OFFDEM/FOSDEM

--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -142,8 +142,8 @@ We might not even know you are doing it because Delta Chat has no tracking or co
 But we warmly welcome feedback (especially bug/success reports!) 
 and contributions via the [Chatmail repository](https://github.com/deltachat/chatmail)
 and also intend to do workshops and sessions at both the upcoming
-37c3 Chaos Communication congress end of the year in Hamburg,
-as well around OFFDEM/FOSSDEM in Bruxelles beginning February 2024.
+[37c3 Chaos Communication Congress](https://events.ccc.de) end of the year in Hamburg,
+as well around [OFFDEM](https://offdem.net/)/[FOSDEM](https://fosdem.org/) in Bruxelles beginning February 2024.
 
 ## Wait a moment, sub-second delivery? 
 
