two-faces.jpeg is not shown on mac/safari - maybe because of the extension?

--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -39,7 +39,7 @@ which we aim to keep running as a community service.
 
 ## How to make e-mail spammers sad, and users safe 
 
-<img src="../assets/blog/two-faces.jpeg" width="140" style="float:right; margin-left:1em;" />  
+<img src="../assets/blog/two-faces.jpg" width="140" style="float:right; margin-left:1em;" />
 
 `nine.testrun.org` currently allows to send 60 messages per minute for any user
 and you can register multiple e-mail addresses.
