chatmail blogpost: added toot ID

--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -2,6 +2,7 @@
 title: Chatmail - replicable, fast and secure chatting infrastructure for all 
 author: holga, nami, x, l, bjoern
 image: ../assets/logos/chatmail-wide.png
+com_id: 111574517097362272
 ---
 
 Today, we are unveiling **chatmail services**,
