--- a/_posts/2023-12-13-chatmail.md
+++ b/_posts/2023-12-13-chatmail.md
@@ -33,7 +33,7 @@ message `echo@nine.testrun.org` and observe a (rapid) reply.
 <img src="../assets/blog/2023-12-scan-account.jpg" width="600" />
 
 Please let us know about success and especially failure 
-to help us streamline `nine.testrun.org, 
+to help us streamline nine.testrun.org, 
 the first public chatmail service 
 which we aim to keep running as a community service.
 
