update 1.42 blogpost: 1.42 is out meanwhile

--- a/_posts/2023-11-23-jumbo-42.md
+++ b/_posts/2023-11-23-jumbo-42.md
@@ -129,10 +129,10 @@ For complete lists of changes see:
 - [iOS changes](https://github.com/deltachat/deltachat-ios/blob/master/CHANGELOG.md) 
 - [Core Rust changes](https://github.com/deltachat/deltachat-core-rust/blob/main/CHANGELOG.md) 
 
-On some stores, the 1.42 app releases might still take a while. 
+~~On some stores, the 1.42 app releases might still take a while. 
 For Desktop, the "1.41" releases on the Microsoft store are fine to use. 
 We typically use even release numbers for store-releases 
-and uneven ones for the many intermediate ones. 
+and uneven ones for the many intermediate ones.~~ (meanwhile 1.42 is released everywhere)
 Special thanks 💜 to Gerry, Andrea and the many other testers and
 community contributors for bug hunting, triaging, discussing and helping
 developers to understand and address issues. 
