--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -22,8 +22,11 @@ en:
   language: Language
 
   download:
+    install: Step 1 - Install Delta Chat
+    get_account: Step 2 - Get an Account
+    get_account_explanation: You can use (almost) any email account with Delta Chat. If you need a new one, tap or scan this QR code to get a random <a href="https://nine.testrun.org" target="_blank">@nine.testrun.org</a> email address
     recommendation: Recommended for you
-    other: Other platforms
+    other: Expand to see other platforms
     source_code: Source Code
     install_via_packagemanager: Install via Package Manager
     outdated: outdated
