--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -25,8 +25,10 @@ en:
     install: Step 1 - Install Delta Chat
     get_account: Step 2 - Get an Account
     get_account_explanation: You can use (almost) any email account with Delta Chat. If you need a new one, tap or scan this QR code to get a random <a href="https://nine.testrun.org" target="_blank">@nine.testrun.org</a> email address
+    add_friends: Step 3 - Enter a Username and Meet Your Friends
+    add_friends_explanation: Now you can enter a username, select a profile picture, and chat with your friends. The best way is to meet them and verify them by <a href="help#howtoe2ee">scanning QR codes</a>.
     recommendation: Recommended for you
-    other: Expand to see other platforms
+    other: Expand to see download options for other platforms
     source_code: Source Code
     install_via_packagemanager: Install via Package Manager
     outdated: outdated
