--- a/_data/lang/nl.yml
+++ b/_data/lang/nl.yml
@@ -22,8 +22,12 @@ nl:
   language: Taal
 
   download:
-    recommendation: Aanbeveling
-    other: Andere besturingssystemen
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: Broncode
     install_via_packagemanager: Installeren via pakketbeheerder
     outdated: verouderd
