--- a/_data/lang/cs.yml
+++ b/_data/lang/cs.yml
@@ -22,8 +22,12 @@ cs:
   language: Jazyk
 
   download:
-    recommendation: Doporučujeme
-    other: Jíné technologie
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: Zdrojový kód
     install_via_packagemanager: Instalace ze správce balíčků
     outdated: zastaralé
