--- a/_data/lang/es.yml
+++ b/_data/lang/es.yml
@@ -22,8 +22,12 @@ es:
   language: Idioma
 
   download:
-    recommendation: Recomendado para ti
-    other: Otras plataformas
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: Código Fuente
     install_via_packagemanager: Instalar a través del Administrador de Paquetes
     outdated: desactualizado
