--- a/_data/lang/pt_BR.yml
+++ b/_data/lang/pt_BR.yml
@@ -22,8 +22,12 @@ pt_BR:
   language: Língua
 
   download:
-    recommendation: Recommended for you
-    other: Other platforms
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: Source Code
     install_via_packagemanager: Install via Package Manager
     outdated: outdated
