--- a/_data/lang/ru.yml
+++ b/_data/lang/ru.yml
@@ -22,8 +22,12 @@ ru:
   language: Язык
 
   download:
-    recommendation: Рекомендуется для вас
-    other: Другие платформы
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: Исходный код
     install_via_packagemanager: Установка через Диспетчер пакетов
     outdated: устаревшее
