--- a/_data/lang/sk.yml
+++ b/_data/lang/sk.yml
@@ -22,8 +22,12 @@ sk:
   language: Jazyk
 
   download:
-    recommendation: Odporúčané pre vás
-    other: Iné platformy
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: "Zdrojový kód "
     install_via_packagemanager: Nainštalujte pomocou Package Manager
     outdated: zastarané
