--- a/_data/lang/tr.yml
+++ b/_data/lang/tr.yml
@@ -22,8 +22,12 @@ tr:
   language: Dil
 
   download:
-    recommendation: Sizin için öneriliyor
-    other: Diğer platformlar
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: Kaynak Kodu
     install_via_packagemanager: Paket Yöneticisi Yoluyla Kur
     outdated: eski
