--- a/_data/lang/zh_CN.yml
+++ b/_data/lang/zh_CN.yml
@@ -22,8 +22,12 @@ zh_CN:
   language: 语言
 
   download:
-    recommendation: 为您推荐
-    other: 其他平台
+    install: ""
+    get_account: ""
+    get_account_explanation: ""
+    add_friends: ""
+    add_friends_explanation: ""
+    other: ""
     source_code: 源代码
     install_via_packagemanager: 通过包管理器安装
     outdated: 过时的
